apps/shiori/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  name: shiori
  namespace: shiori
spec:
  rules:
    - host: my-shiori.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shiori
                port:
                  name: http
